Update switch name

--- a/automation/hannah.yaml
+++ b/automation/hannah.yaml
@@ -22,11 +22,11 @@
       at: '23:00:00'
   action:
     service_template: "switch.turn_off"
-    entity_id: switch.double_plug
+    entity_id: switch.double_plug_2
 - alias: 'Hannah Reading Light On'
   trigger:
     - platform: time
       at: '06:00:00'
   action:
     service_template: "switch.turn_on"
-    entity_id: switch.double_plug
+    entity_id: switch.double_plug_2
