--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -147,19 +147,19 @@ views:
               service_data:
                 entity_id: switch.in_wall_smart_toggle_switch_120_277vac_current_value_2
           - type: entity-button
-            entity: switch.double_plug
+            entity: switch.double_plug_2
             icon: mdi:lightbulb
             name: Hannah Reading
             tap_action:
               action: call-service
               service: switch.turn_on
               service_data:
-                entity_id: switch.double_plug
+                entity_id: switch.double_plug_2
             hold_action:
               action: call-service
               service: switch.turn_off
               service_data:
-                entity_id: switch.double_plug
+                entity_id: switch.double_plug_2
       - type: vertical-stack
         cards:
           - type: alarm-panel
