--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -119,33 +119,33 @@ views:
       - type: horizontal-stack
         cards:
           - type: entity-button
-            entity: switch.switch.in_wall_toggle_switch_120_277_qfsw_500s
+            entity: switch.in_wall_toggle_switch_120_277_qfsw_500s
             icon: mdi:lightbulb
             name: Garage Ext
             tap_action:
               action: call-service
               service: switch.turn_on
               service_data:
-                entity_id: switch.switch.in_wall_toggle_switch_120_277_qfsw_500s
+                entity_id: switch.in_wall_toggle_switch_120_277_qfsw_500s
             hold_action:
               action: call-service
               service: switch.turn_off
               service_data:
-                entity_id: switch.switch.in_wall_toggle_switch_120_277_qfsw_500s
+                entity_id: switch.in_wall_toggle_switch_120_277_qfsw_500s
           - type: entity-button
-            entity: switch.switch.in_wall_toggle_switch_120_277_qfsw_500s_2
+            entity: switch.in_wall_toggle_switch_120_277_qfsw_500s_2
             icon: mdi:lightbulb
             name: Front Patio
             tap_action:
               action: call-service
               service: switch.turn_on
               service_data:
-                entity_id: switch.switch.in_wall_toggle_switch_120_277_qfsw_500s_2
+                entity_id: switch.in_wall_toggle_switch_120_277_qfsw_500s_2
             hold_action:
               action: call-service
               service: switch.turn_off
               service_data:
-                entity_id: switch.switch.in_wall_toggle_switch_120_277_qfsw_500s_2
+                entity_id: switch.in_wall_toggle_switch_120_277_qfsw_500s_2
           - type: entity-button
             entity: switch.double_plug_2
             icon: mdi:lightbulb
