--- a/automation/front_door.yaml
+++ b/automation/front_door.yaml
@@ -29,7 +29,7 @@
         message: "The front door was unlocked, I locked it."
         data:
           type: tts
-    - service: notify.mobile_app_iphone
+    - service: notify.mobile_app_iphone_90
       data:
         title: "Home Assistant Alerts"
         message: "The front door has been locked."
