--- a/automation/front_door.yaml
+++ b/automation/front_door.yaml
@@ -12,11 +12,11 @@
       condition: and
       conditions:
         - condition: state
-          entity_id: lock.schlage_connect_smart_deadbolt
+          entity_id: lock.node_4
           state: unlocked
   action:
     - service_template: "lock.lock"
-      entity_id: lock.schlage_connect_smart_deadbolt
+      entity_id: lock.node_4
     - delay:
         seconds: 5
     - service: notify.alexa_media_kitchen_dot
