--- a/automation/garage_entry_door.yaml
+++ b/automation/garage_entry_door.yaml
@@ -12,11 +12,11 @@
       condition: and
       conditions:
         - condition: state
-          entity_id: lock.touchscreen_deadbolt_z_wave_plus_current_lock_mode
+          entity_id: lock.node_8
           state: unlocked
   action:
     - service_template: "lock.lock"
-      entity_id: lock.touchscreen_deadbolt_z_wave_plus_current_lock_mode
+      entity_id: lock.node_8
     - delay:
         seconds: 5
     - service: notify.alexa_media_kitchen_dot
