--- a/automation/lights.yaml
+++ b/automation/lights.yaml
@@ -55,14 +55,14 @@
 #####################################################################################
 ###  deck light
 #####################################################################################
-- alias: 'Deck Light On'
+- alias: 'Deck Wall Light On'
   trigger:
     - platform: sun
       event: sunset
   action:
     - service: light.turn_on
       target:
-        entity_id: light.deck_light
+        entity_id: light.deck_wall_light
 - alias: 'Lounge Lights Off'
   trigger:
     - platform: sun
@@ -71,4 +71,4 @@
   action:
     - service: light.turn_off
       target:
-        entity_id: light.deck_light
+        entity_id: light.deck_wall_light
