--- a/automation/lights.yaml
+++ b/automation/lights.yaml
@@ -62,7 +62,7 @@
   action:
     - service: light.turn_on
       target:
-        entity_id: light.deck_wall_light
+        entity_id: light.deck_wall_light_light
 - alias: 'Lounge Lights Off'
   trigger:
     - platform: sun
@@ -71,4 +71,4 @@
   action:
     - service: light.turn_off
       target:
-        entity_id: light.deck_wall_light
+        entity_id: light.deck_wall_light_light
