--- a/camera/reolink_cameras.yaml
+++ b/camera/reolink_cameras.yaml
@@ -1,4 +1,4 @@
-- platform: reolink_dev
+- platform: reolink
   host: 192.168.2.2
   name: gym
   channel: 0
@@ -6,7 +6,7 @@
   password: !secret reolink_password
   stream: main
   protocol: rtsp
-- platform: reolink_dev
+- platform: reolink
   host: 192.168.2.2
   name: garage
   channel: 1
@@ -14,7 +14,7 @@
   password: !secret reolink_password
   stream: main
   protocol: rtsp
-- platform: reolink_dev
+- platform: reolink
   host: 192.168.2.2
   name: driveway
   channel: 2
@@ -22,7 +22,7 @@
   password: !secret reolink_password
   stream: main
   protocol: rtsp
-- platform: reolink_dev
+- platform: reolink
   host: 192.168.2.2
   name: basement
   channel: 3
