--- a/custom_components/alexa_media/manifest.json
+++ b/custom_components/alexa_media/manifest.json
@@ -8,6 +8,11 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/alandtse/alexa_media_player/issues",
   "loggers": ["alexapy", "authcaptureproxy"],
-  "requirements": ["alexapy==1.29.5", "packaging>=20.3", "wrapt>=1.14.0"],
-  "version": "5.3.0"
+  "requirements": [
+    "alexapy==1.29.14",
+    "packaging>=20.3",
+    "wrapt>=1.14.0",
+    "dictor>=0.1.12,<0.2"
+  ],
+  "version": "5.8.4"
 }
